--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
        <a href="#">Change</a>
      </div>
  
-      <a class="payment-btn" href="https://sidehustle.ng/">Proceed to Payment</a> 
+      <a class="payment-btn" target="_blank" href="https://sidehustle.ng/">Proceed to Payment</a> 
       <a class="cancel-btn" href="#">Cancel Order</a>
      </div>
       
