--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    <link rel="stylesheet" href="styles.css">
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   
-  <title>Frontend Mentor | Order summary card</title>
+  <title>SideHustle Group38 | Order summary card</title>
 
   
 </head>
